--- a/prestation.html
+++ b/prestation.html
@@ -185,10 +185,10 @@
                     </div>
 
                     <div id="imagerie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                             <img class="img-responsive img-circle" src="images/radiologie_2.JPG" alt="chat">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-camera"></i> IMAGERIE</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias.</small>
                             <h4>L'imagerie c'est top !</h4>
@@ -198,10 +198,10 @@
                     </div>
 
                     <div id="analyse" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                             <img class="img-responsive img-circle" src="images/Labo_analyse_microscopique.JPG" alt="chat">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-medkit"></i> Analyse sanguine</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur maxime, laborum alias.</small>
                             <h4>Les analyses sanguines c'est top !</h4>
@@ -214,10 +214,10 @@
                     </div>
 
                     <div id="chirurgie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                             <img class="img-responsive img-circle" src="images/chirurgie_1.JPG" alt="chat">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-heartbeat"></i> CHIRURGIE</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
                             <h4>La chirurgie c'est top !</h4>
@@ -232,10 +232,10 @@
                     </div>
 
                     <div id="hospitalisation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                             <img class="img-responsive img-circle" src="images/Chatterie.JPG" alt="chat">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-hospital-o"></i> HOSPITALISATION</h3>
                             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
                             <h4>L'hospitalisation c'est top !</h4>
@@ -247,10 +247,10 @@
                     </div>
 
                     <div id="nac" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
                             <img class="img-responsive img-circle" src="images/NAC.JPG" alt="chat">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-paw"></i> NAC</h3>
                             <small>Les nouveaux animaux de compagnies.</small>
                             <h4>Les nacs c'est top !</h4>
