--- a/prestation.html
+++ b/prestation.html
@@ -164,8 +164,8 @@
                 <section id="navbar-prestation" class="row espace-footer center-block">
 
                     <div id="consultation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
-                            <img class="img-responsive img-circle" src="images/Consultation_3.JPG" alt="chat">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                            <img class="img-responsive img-circle" src="images/Consultation_3.JPG" alt="consultation">
                         </div>
                         <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-stethoscope"></i> CONSULTATION</h3>
@@ -185,8 +185,8 @@
                     </div>
 
                     <div id="imagerie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
-                            <img class="img-responsive img-circle" src="images/radiologie_2.JPG" alt="chat">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                            <img class="img-responsive img-circle" src="images/radiologie_2.JPG" alt="radiologie">
                         </div>
                         <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-camera"></i> IMAGERIE</h3>
@@ -198,8 +198,8 @@
                     </div>
 
                     <div id="analyse" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
-                            <img class="img-responsive img-circle" src="images/Labo_analyse_microscopique.JPG" alt="chat">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                            <img class="img-responsive img-circle" src="images/Labo_analyse_microscopique.JPG" alt="analyse microscopique">
                         </div>
                         <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-medkit"></i> Analyse sanguine</h3>
@@ -214,8 +214,8 @@
                     </div>
 
                     <div id="chirurgie" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
-                            <img class="img-responsive img-circle" src="images/chirurgie_1.JPG" alt="chat">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                            <img class="img-responsive img-circle" src="images/chirurgie_1.JPG" alt="salle chirurgie">
                         </div>
                         <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-heartbeat"></i> CHIRURGIE</h3>
@@ -232,8 +232,8 @@
                     </div>
 
                     <div id="hospitalisation" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
-                            <img class="img-responsive img-circle" src="images/Chatterie.JPG" alt="chat">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                            <img class="img-responsive img-circle" src="images/Chatterie.JPG" alt="chatterie">
                         </div>
                         <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-hospital-o"></i> HOSPITALISATION</h3>
@@ -247,8 +247,8 @@
                     </div>
 
                     <div id="nac" class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 article-prestation">
-                        <div class="col-md-4 col-sm-5 col-xs-offset-3 col-xs-6">
-                            <img class="img-responsive img-circle" src="images/NAC.JPG" alt="chat">
+                        <div class="col-md-4 col-sm-5 col-xs-offset-2 col-xs-8">
+                            <img class="img-responsive img-circle" src="images/NAC.JPG" alt="hamster">
                         </div>
                         <div class="col-md-8 col-xs-12">
                             <h3><i class="fa fa-paw"></i> NAC</h3>
