--- a/index.html
+++ b/index.html
@@ -49,16 +49,29 @@
 
 
         <!-- en-tête du site -->
-        <header class="row">
+        <header class="row hidden-xs">
             <div class="header-corp">
                 <!-- logo -->
-                <div class="logo-img pull-right"></div>
+                <div class="logo-img img-responsive"></div>
                 <!-- infos du header -->
                 <div class="fix-xs">
                     <h1>123 VETO - Clinique Vétérinaire</h1>
                     <h2>Dr Eric Wintz - Dr Aurélie Mayoussier</h2>
                     <p>123 Véto vous accueille du lundi au vendredi de 9h à 12h et de 14h à 19h et le samedi de 9h à 12h</p>
                     <p>Les urgences sont assurées 24h/24 7 jours sur 7 sur appel téléphonique au 02 40 01 61 69</p>
+                </div>
+            </div>
+        </header>
+        
+        <header class="row hidden-sm hidden-md hidden-lg">
+            <div class="header-corp">
+                <!-- logo -->
+                <div class="logo-img2 center-block "></div>
+                <!-- infos du header -->
+                <div class="text-center headerxs">
+                    <h1>123 VETO - Clinique Vétérinaire</h1>
+                    <h2>Dr Eric Wintz - Dr Aurélie Mayoussier</h2>
+                    <p>De 9h à 12h et de 14h à 19h / samedi de 9h à 12h - 02 40 01 61 69</p>
                 </div>
             </div>
         </header>
@@ -242,7 +255,7 @@
 
                     <div class="row1 pad-50">
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-4 col-sm-4 col-md-4 btn-m-50">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
                             <div class="col-md-12">
                                 <i class="fa fa-stethoscope fa-3x"></i>
                             </div>
@@ -251,7 +264,7 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-4 col-sm-4 col-md-4 btn-m-50">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
                             <div class="col-md-12">
                                 <i class="fa fa-camera fa-3x"></i>
                             </div>
@@ -261,7 +274,7 @@
                         </div>
                         <!-- bloc 1/6 -->
                         
-                        <div class="col-xs-4 col-sm-4 col-md-4 btn-m-50">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
                             <div class="col-md-12">
                                 <i class="fa fa-medkit fa-3x"></i>
                             </div>
@@ -270,7 +283,7 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-4 col-sm-4 col-md-4 btn-m-50">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
                             <div class="col-md-12">
                                 <i class="fa fa-heartbeat fa-3x"></i>
                             </div>
@@ -279,7 +292,7 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-4 col-sm-4 col-md-4 btn-m-50">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
                             <div class="col-md-12">
                                 <i class="fa fa-hospital-o fa-3x"></i>
                             </div>
@@ -288,7 +301,7 @@
                             </div>
                         </div>
                         <!-- bloc 1/6 -->
-                        <div class="col-xs-4 col-sm-4 col-md-4 btn-m-50">
+                        <div class="col-xs-6 col-sm-4 col-md-4 btn-m-50 btn-padding-reset">
                             <div class="col-md-12">
                                 <i class="fa fa-paw fa-3x"></i>
                             </div>
